<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_bg" >
    
    <android.support.v4.view.ViewPager
        android:id="@+id/pagerCamera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/camera_row_layout_margin"
        android:overScrollMode="never" />

    <TextView
        android:id="@+id/btnCameraNext"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:alpha="0.2"
        android:text="@string/global_next"
        android:textSize="@dimen/global_page_changer"
        android:textColor="@color/global_text" />

    <TextView
        android:id="@+id/btnCameraPrev"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:alpha="0.2"
        android:text="@string/global_prev"
        android:textSize="@dimen/global_page_changer"
        android:textColor="@color/global_text" />
    
    <LinearLayout
        android:id="@+id/layoutLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/camera_text_margin"
            android:text="@string/global_loading"
		    android:textColor="@color/global_text"
            android:textSize="@dimen/global_text_header_size" />

    </LinearLayout>
    
</RelativeLayout>
